<resources>
    <string name="app_name">Bookshop</string>
    <string name="company_name">ZineddineBtc</string>
    <string name="from">from</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_here">New here?</string>
    <string name="register_now">Register now!</string>
    <string name="by_creating_an_account_you_agree_on">By creating an account, you are agreeing to our</string>
    <string name="invalid_input">Invalid input</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Registering failed</string>
    <string name="invalid_email">Invalid email</string>
    <string name="insufficient_password">Password must contain more than 7 digits</string>
    <string name="already_registered">Already registered?</string>
    <string name="register">Register</string>
    <string name="city">City</string>
    <string name="finish">Finish</string>
    <string name="name">Name</string>
    <string name="set_up_profile">Set up Profile</string>
    <string name="no_photo_selected">No selected photo</string>
    <string name="invalid_name">Invalid name</string>
    <string name="unspecified_city">Unspecified city</string>
    <string name="title_activity_core">CoreActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_results">No results</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="error">Error</string>
    <string name="sign_out">Sign out</string>
    <string name="search_hint">Search a book</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="post">POST</string>
    <string name="unspecified_image">Unspecified image</string>
    <string name="unspecified_title">Unspecified title</string>
    <string name="unspecified_description">Unspecified desccription</string>
    <string name="number">0123456789</string>
    <string name="no_books_posted_yet_by_this_user">No books posted yet by this user</string>
    <string name="phone">Phone</string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="pending_edit">Pending edit</string>
    <string name="my_books">My books</string>
    <string name="my_books_to_offer">My books to offer</string>
    <string name="no_books_offered_yet">No books offered yet</string>
    <string name="price">Price</string>
    <string name="unspecified_price">Unspecified price</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="books">Books</string>
    <string name="users">Users</string>
</resources>
