<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.core.AddBookActivity"
    android:orientation="vertical">
    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="match_parent">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/photoIV"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="#ffffff"
                        android:src="@drawable/ic_account_circle_grey"
                        app:civ_border_color="#ffffff"
                        app:civ_border_width="2dp"
                        android:layout_marginEnd="5dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/nameTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/cityTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/city"
                            android:textSize="12sp"/>
                        <TextView
                            android:id="@+id/phoneTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textSize="12sp"/>
                    </LinearLayout>
                </LinearLayout>
                <EditText
                    android:id="@+id/priceET"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:background="@drawable/white_background_border"
                    android:hint="@string/price"
                    android:textSize="12sp"
                    android:padding="5dp"/>
            </LinearLayout>
            <EditText
                android:id="@+id/titleET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/title"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:background="@drawable/white_background_border"/>
            <EditText
                android:id="@+id/descriptionET"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/description"
                android:gravity="start"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/white_background_border"/>
            <ImageView
                android:id="@+id/bookIV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_image_grey"
                android:scaleType="center"/>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:visibility="gone"
        android:id="@+id/errorTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:background="#ff0000"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="5dp"/>
</RelativeLayout>