<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingBottom="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photoIV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:src="@drawable/ic_account_circle_grey"
                app:civ_border_color="#ffffff"
                app:civ_border_width="2dp"
                android:layout_marginEnd="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/cityTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"/>
        <ImageView
            android:id="@+id/bookIV"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
    </LinearLayout>

</LinearLayout>