<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.core.ProfileActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photoIV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:src="@drawable/ic_account_circle_grey"
        app:civ_border_color="#ffffff"
        app:civ_border_width="2dp"/>
    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:paddingEnd="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_special"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/cityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="12sp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/phoneTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:background="@drawable/white_background_border" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/booksRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/noBooksTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_books_posted_yet_by_this_user"
        android:layout_gravity="center"/>
</LinearLayout>