<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingBottom="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/userLL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photoIV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:src="@drawable/ic_account_circle_grey"
                app:civ_border_color="#ffffff"
                app:civ_border_width="2dp"
                android:layout_marginEnd="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/nameTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginEnd="5dp"/>
                    <TextView
                        android:id="@+id/cityTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textSize="12sp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/phoneTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>